# ogm_ae

./: CMakeLists.txt  LICENSE  README.md  install_instructions.txt  package.xml
config/: exploration.yaml  general.yaml  maps.yaml  maps_gazebo.yaml  robots.yaml  sensors.yaml
home/ekaufman/git/ogm_ae/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml
home/ekaufman/git/ogm_ae/config/: depth_sensors.yaml  exploration.yaml  maps_gazebo.yaml  robots.yaml  sensors.yaml
home/ekaufman/git/ogm_ae/include/ogm_ae/: EntropyBasedAutonomousExploration.hpp  ProbabilisticOccupancyGridMapping.hpp  aux_fun.h  voxel.h
home/ekaufman/git/ogm_ae/launch/: pcl_change_frame.launch
home/ekaufman/git/ogm_ae/msg/: PolyLeastSquaresTraj.msg
home/ekaufman/git/ogm_ae/rviz/: SEH_demo.rviz  SEH_experiment.rviz  SEH_experiment_3rd_person_follower.rviz  exploration_experiment.rviz  exploration_experiment_playback.rviz  exploration_viz.rviz  gazebo_2D_comboMap.rviz  gazebo_coll.rviz  gazebo_entropy.rviz  gazebo_multi_map.rviz  nrl_3rd_person_with_axis.rviz  octomap_2d_exploration.rviz  octomap_simple_world.rviz  simple_world.rviz  test_2D_entropy_map.rviz  test_namespaces.rviz
home/ekaufman/git/ogm_ae/src/: EntropyBasedAutonomousExploration.cpp  ProbabilisticOccupancyGridMapping.cpp  entropy_based_autonomous_exploration_node.cpp  generate_3D_rviz_msgs_node.cpp  generate_exploration_map_node.cpp  paths_to_cmd_node.cpp  probabilistic_occupancy_grid_mapping_node.cpp  rot_tf_node.cpp  sensor_conversion.cpp  voxel.cpp
home/ekaufman/git/ogm_ae/test/: utest.cpp
include/ogm_ae/: Exploration.hpp  Mapping.hpp  OgmAeLib.hpp  Robot.hpp  aux_fun.h  ogm_ae.hpp
launch/: filter_pcl_voxel_grid.launch  gen_viz_pcl_msgs.launch  lsr_to_pcl.launch  msg_conversions.launch
msg/: DesiredState.msg  ModelStateStamped.msg  PolyLeastSquaresTraj.msg  UpdatedMapCells.msg
rviz/: 2D_map_test.rviz  3D_mapping_nrl.rviz  SEH_3D_exploration.rviz  gazebo_3Dcells.rviz  gazebo_test.rviz  move_robot.rviz  nrl_3rd_person.rviz  show_candidates.rviz  single_robot.rviz  still_NRL.rviz  test_namespaces.rviz  view_frames_mars.rviz  viz_1quad_3DReduced.rviz  viz_1quad_SEH.rviz  viz_2quads_SEH.rviz  viz_3quads_3D_SEH.rviz  viz_3quads_SEH.rviz  viz_3quads_SEH_2DMap_rot.rviz  viz_3quads_SEH_3DMap_rot.rviz
src/: Exploration.cpp  Mapping.cpp  OgmAeLib.cpp  Robot.cpp  entropy_based_autonomous_exploration_node.cpp  gazebo_communication_node.cpp  generate_3D_rviz_msgs_node.cpp  generate_exploration_map_node.cpp  ogm_ae.cpp  paths_to_cmd_node.cpp  pcl_limit_range.cpp  probabilistic_occupancy_grid_mapping_node.cpp  rot_tf_node.cpp  sensor_conversion.cpp  wandering_robot_node.cpp
test/: test_import.cpp
